--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\InternalMessaging\InternalMessaging.csproj" />
       <ProjectReference Include="..\DataInMemory\DataInMemory.csproj" />
+      <ProjectReference Include="..\Queries\Queries.csproj" />
       <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
